fix: background image on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,8 @@ body {
     background-image: url(../images/mexican.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
     overflow: hidden;
     display: flex;
     flex-direction: column;
